# Hamilton

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/spice/: README.txt
data/spice/gateway_nrho_reference/: gateway.lbl.txt
data/spice/international_space_station/: iss.bsp
include/coordinates/: earth.hpp  general.hpp
include/disturbances/: earth_gravity.hpp  gravity.hpp
include/ephemeris/: ephemeris.hpp  spice.hpp  spice_ephemeris.hpp  spice_imports.hpp  spice_kernel_set.hpp  spice_label_map.hpp  time.hpp
include/math/: axis3.hpp  constants.hpp  core_math.hpp  ellipsoid.hpp  lla.hpp  matrix3.hpp  principal_inertia.hpp  quaternion.hpp  rotator.hpp  spherical.hpp  vector3.hpp
include/meta/: indexable.hpp
include/mission/: manoeuvre.hpp  orbital.hpp
include/numerics/: root1d.hpp
include/simengine/: physics_system.hpp  simulation.hpp
include/twobody/: kepler.hpp  orbit.hpp
include/utils/: errors.hpp  harray.hpp  hstring.hpp  meta.hpp
src/disturbances/: CMakeLists.txt  earth_gravity.cpp
src/ephemeris/: CMakeLists.txt  CmakeLists.txt  spice.cpp  spice_ephemeris.cpp  spice_kernel_set.cpp  spice_label_map.cpp  time.cpp
src/meta/: CMakeLists.txt  CmakeLists.txt  indexable.cpp
src/twobody/: CMakeLists.txt  CmakeLists.txt  orbit.cpp
tests/: CMakeLists.txt  CmakeLists.txt  test_utils.hpp
tests/coordinates_tests/: earth_tests.cpp  general_coordinate_tests.cpp
tests/disturbance_tests/: earth_gravity.cpp  earth_gravity_tests.cpp
tests/ephemeris_tests/: spice.cpp  spice_tests.cpp
tests/math_tests/: basic_math_operation_tests.cpp  matrix_operation_tests.cpp  quaternion_operation_tests.cpp  rotator_operations.cpp  vector_operation_tests.cpp
tests/mission_tests/: kepler.cpp  manoeuvre.cpp
tests/numerics_tests/: root_finder_tests.cpp
tests/twobody_tests/: kepler_tests.cpp  orbit_tests.cpp
tests/type_tests/: array_tests.cpp  string_tests.cpp
